tests/baselines/reference/internalAliasInterfaceInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasInterfaceInsideLocalModuleWithoutExportAccessError.ts(11,10): error TS2694: Namespace '"internalAliasInterfaceInsideLocalModuleWithoutExportAccessError".c' has no exported member 'b'.


==== internalAliasInterfaceInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export namespace a {
        export interface I {
        }
    }
    
    export namespace c {
        import b = a.I;
        export var x: b;
    }
    
    var x: c.b;
             ~
!!! error TS2694: Namespace '"internalAliasInterfaceInsideLocalModuleWithoutExportAccessError".c' has no exported member 'b'.